--- a/licensing-service/pom.xml
+++ b/licensing-service/pom.xml
@@ -52,7 +52,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>licensing-service</finalName>
+		<finalName>${project.artifactId}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
