First cut of docker compose on a single service.

--- a/licensing-service/Dockerfile
+++ b/licensing-service/Dockerfile
@@ -3,9 +3,9 @@ FROM maven:3.5-jdk-8 AS init
 RUN mkdir /opt/app
 VOLUME ["/root/home:../.m2/repository"]
 WORKDIR /opt/app
-ADD ../settings.xml .
 COPY src src
 COPY pom.xml .
+COPY settings.xml .
 RUN mvn clean package -DskipTests -s settings.xml -q
 
 ## ENDING MAVEN BUILD NOT THE PACKAGING OF THE APP ITSELF
